# Evacuation_Simulation

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
Api/: jest.config.js  package-lock.json  tsconfig.json
Api/src/: index.ts
Backend/: Dockerfile
Backend/Api/: package-lock.json  package.json
Backend/Api/__tests__/: index.test.ts
Backend/Api/src/: index.ts  route.ts
Backend/Simulation/src/: main.py
Backend/Simulation/src/simulation/: building.py  logger.py
Client/: Dockerfile  package-lock.json  package.json
Client/src/: App.tsx  main.tsx  theme.ts
Client/src/api/: axiosInstance.ts  simulationService.ts
Client/src/components/: Carousel.tsx  SimulationParamsForm.tsx  SimulationPresentation.tsx
Client/src/services/: simulationService.ts
Client/src/types/: simulationParams.ts
Server/: Dockerfile
Server/Api/: package-lock.json  package.json
Server/Simulation/: README.md
Server/Simulation/data/: example.txt
Server/Simulation/src/simulation/: colors.py
Simulation/docs/: info.md
Simulation/src/simulation/: logger.py
data/: context.txt
docs/: info.md  nate_tasks.md  rylei_tasks.md  summary.md  time.md
src/: building.py  colors.py  disaster.py  main.py  memory.py  person.py  personality.py  prompt.py  simulation.py  strategy.py  test.py
src/simulation/: building.py  colors.py  logger.py  run  simulation.py
src/simulation/person/: choice.py  fight_entry.py  movement.py  person.py  personality.py  prompt.py  thinker.py  vision.py
test/: AStarBuilding_Test.py  AStarScript_Test.py
(+2 files in other folders)
